--- a/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
@@ -47,15 +47,11 @@
         "filename": "../../observability/observability.md"
       },
       {
-        "title": "Lab 10: Implement Canary Deployment",
-        "filename": "../../verifytests/verifytests.md"
+        "title": "Lab 10: Add Liquibase to the pipeline for schema changes",
+        "filename": "../../liquibase/liquibase.md"
       },
       {
-        "title": "Lab 11: Accessing AI and Other OCI Services",
-        "filename": "../../accessociservices/accessociservices.md"
-      },
-      {
-        "title": "Lab 12: Tear Down",
+        "title": "Lab 11: Tear Down",
         "filename": "../../teardown/teardown.md"
       },
       {
