--- a/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
@@ -35,23 +35,19 @@
         "filename": "../../configurevault/configurevault.md"
       },
       {
-        "title": "Lab 7: Setup The Pipeline",
-        "filename": "../../setuppipeline/setuppipeline.md"
+        "title": "Lab 7: Create, Run, and Verify Pipeline",
+        "filename": "../../pipeline/pipeline.md"
       },
       {
-        "title": "Lab 8: Run and Test the pipeline",
-        "filename": "../../runpipeline/runpipeline.md"
-      },
-      {
-        "title": "Lab 9: Observability of Multi-Cloud Architecture",
+        "title": "Lab 8: Observability of Multi-Cloud Architecture",
         "filename": "../../observability/observability.md"
       },
       {
-        "title": "Lab 10: Add Liquibase for CI/CD of database changes",
+        "title": "Lab 9: Add Liquibase for CI/CD of database changes",
         "filename": "../../liquibase/liquibase.md"
       },
       {
-        "title": "Lab 11: Tear Down",
+        "title": "Lab 10: Tear Down",
         "filename": "../../teardown/teardown.md"
       },
       {
