--- a/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
@@ -39,7 +39,7 @@
         "filename": "../../observability/observability.md"
       },
       {
-        "title": "Lab 8: Add Liquibase for CI/CD of database changes",
+        "title": "Lab 8: Add Liquibase for CI/CD of Database Changes",
         "filename": "../../liquibase/liquibase.md"
       },
       {
