--- a/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
@@ -11,7 +11,7 @@
         "filename":"https://oracle-livelabs.github.io/common/labs/cloud-login/event-register-free-tier-account.md"
       },
       {
-        "title": "Lab 1: Create an Oracle Cloud Database",
+        "title": "Lab 1: Create an Oracle Database",
         "filename": "../../createdatabase/createdatabase.md"
       },
       {
