--- a/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
@@ -35,7 +35,7 @@
         "filename": "../../pipeline/pipeline.md"
       },
       {
-        "title": "Lab 7: Observability of Multi-Cloud Architecture",
+        "title": "Lab 7: OpenTelemetry Observability of Multi-Cloud Architecture",
         "filename": "../../observability/observability.md"
       },
       {
