--- a/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
@@ -1,5 +1,5 @@
 {
-  "workshoptitle": "Build MultiCloud Devops using Azure CI/CD Pipelines with Oracle Database Cloud Services",
+  "workshoptitle": "Building MultiCloud Devops using Azure CI/CD Pipelines with Oracle Database Cloud Services",
   "help": "livelabs-help-devdb-us@oracle.com",
 	"tutorials": [
       {
