--- a/visual-builder/studio/extend-apps/workshops/tenancy/manifest.json
+++ b/visual-builder/studio/extend-apps/workshops/tenancy/manifest.json
@@ -25,7 +25,7 @@
             "filename": "../../connect-to-data/connect-data.md"
         },
         {
-            "title": "Lab 4: Test and publish the extension",
+            "title": "Lab 4: Publish the extension",
             "filename": "../../publish/publish.md"
         },
         {
