Fixed WMS ID 11484 - Database 19c - JSON
Video link and lab numbering fixed for WMS ID 11484 - Database 19c - JSON

--- a/oracle-db-features-for-developers/workshops/json-livelabs/manifest.json
+++ b/oracle-db-features-for-developers/workshops/json-livelabs/manifest.json
@@ -30,6 +30,12 @@
             "filename": "../../json/json.md"
         },
         {
+            "title": "Lab 4: JSON in the Oracle DB",
+            "description": "JSON Documents",
+            "publisheddate": "4/05/2020",
+            "filename": "../../json/json.md"
+        },
+        {
             "title": "Lab 5: JSON in the Oracle DB - Advanced Topics",
             "description": "JSON Documents",
             "publisheddate": "4/05/2020",
