Removing all OCW support labs from workshop manifests

--- a/java-panama/workshops/ocw-sandbox/manifest.json
+++ b/java-panama/workshops/ocw-sandbox/manifest.json
@@ -36,9 +36,10 @@
             "description": "",
             "filename": "../../conclusion.md"
         },
-        {
-            "title": "JavaOne / CloudWorld - Get Help",
-            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
-        }
+                {
+                  "title": "Need Help?",
+                  "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+                  "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
+                }
     ]
 }
