--- a/extend-oda-with-oci-ai-services/workshops/ocw-freetier/manifest.json
+++ b/extend-oda-with-oci-ai-services/workshops/ocw-freetier/manifest.json
@@ -42,8 +42,9 @@
             "filename": "../../vision/vision.md"
         },
         {
-            "title": "Oracle CloudWorld 2022 - Get Help",
-            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
-          }
+          "title": "Need Help?",
+          "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+          "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+        }
     ]
 }
