--- a/modernize-peoplesoft-with-conversational-ai/workshops/ocw-tenancy/manifest.json
+++ b/modernize-peoplesoft-with-conversational-ai/workshops/ocw-tenancy/manifest.json
@@ -25,9 +25,11 @@
             "filename": "../../Lab3/3-test-oda.md"
         },
         {
-            "title": "Oracle CloudWorld 2022 - Get Help",
-            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
- }
+          "title": "Need Help?",
+          "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+          "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+        }
+
 
 
     ]
