--- a/oci-devops-cicd-helm-ci/workshops/ocw-freetier/manifest.json
+++ b/oci-devops-cicd-helm-ci/workshops/ocw-freetier/manifest.json
@@ -38,11 +38,12 @@
       "filename":"../../cleanup/cleanup.md"
 
     },
-
     {
-      "title": "Oracle CloudWorld 2023 - Get Help",
-      "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
+      "title": "Need Help?",
+      "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+      "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
     }
+
   ]
 }
 
