--- a/python-and-database-scripting/workshops/ocw23-sandbox/manifest.json
+++ b/python-and-database-scripting/workshops/ocw23-sandbox/manifest.json
@@ -67,8 +67,9 @@
             "filename": "../../lab-15-query-json/query-json.md"
         },
         {
-            "title": "Oracle CloudWorld 2023 - Support",
-            "filename": "https://oracle-livelabs.github.io/common/support/ocwsupportlab/ocwsupportlab.md"
+          "title": "Need Help?",
+          "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+          "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
         }
     ]
 }
