--- a/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-azuredevops-oracledb/workshops/tenancy/manifest.json
@@ -19,7 +19,7 @@
         "filename": "../../createake/createake.md"
       },
       {
-        "title": "Lab 3: Configure Oracle@Azure or Interconnect",
+        "title": "Lab 3: Configure Oracle Database@Azure or Interconnect",
         "filename": "../../interconnect/interconnect.md"
       },
       {
