--- a/ai-optimizer/workshops/desktop/manifest.json
+++ b/ai-optimizer/workshops/desktop/manifest.json
@@ -4,45 +4,49 @@
   "variables": ["../../variables/variables.json",
     "../../variables/variables-in-another-file.json"],
   "tutorials": [
-    {
-      "title": "Introduction",
-      "description": "The Introduction is always second for LiveLabs. The title and contents menu title match for the Introduction.",
-      "filename": "../../introduction/introduction.md"
-    },
-    {
-      "title": "Get Started with noVNC Remote Desktop",
-      "description": "Using noVNC Remote Desktop",
-      "filename": "https://oracle-livelabs.github.io/common/labs/remote-desktop/using-novnc-remote-desktop.md"
-    },
-    {
-      "title": "Lab 1: Provision an Instance",
-      "description": "Labs that follow the introduction are numbered, starting with Lab 1",
-      "filename": "../../provision/provision.md"
-    },
-    {
-      "title": "Lab 2: Setup the Environment",
-      "filename": "../../setup/setup.md"
-    },
-    {
-      "title": "Lab 3: Load Data into an Instance",
-      "filename": "../../data-load/data-load.md"
-    },
-    {
-      "title": "Lab 4: Query Data",
-      "filename": "../../query/query.md"
-    },
-    {
-        "title": "Lab 5: Tables in LiveLabs",
-        "filename": "../../tables/tables.md"
-    },
-    {
+        {
+            "title": "Introduction",
+            "description": "The Introduction is always first. The title and contents menu title match for the Introduction.",
+            "filename": "../../introduction/introduction.md"
+        },
+        {
+            "title": "Get Started",
+            "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login.md"
+        },
+        {
+            "title": "Lab 1: Explore the Environment",
+            "description": "Labs that follow the introduction are numbered, starting with Lab 1",
+            "filename": "../../explore/explore.md"
+        },
+        {
+            "title": "Lab 2: Prepare the Vector Store",
+            "filename": "../../prepare/prepare.md"
+        },
+        {
+            "title": "Lab 3: Using Retrieval Augmented Generation",
+            "filename": "../../RAG/RAG.md"
+        },
+        {
+            "title": "Lab 4: Experimenting with Models, Parameters and Techniques",
+            "filename": "../../experimenting/experimenting.md"
+        },
+        {
+            "title": "Lab 5: Evaluating Performance",
+            "filename": "../../evaluating/evaluating.md"
+        },
+        {
             "title": "Lab 6: Variables in LiveLabs",
             "filename": "../../variables/variables.md"
-    },
-    {
-      "title": "Need Help?",
-      "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-      "filename": "https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
-    }
+        },
+        {
+            "title": "(Optional) Lab 7: Using the API Server",
+            "filename": "../../server/server.md"
+        },
+        {
+            "title": "Need Help?",
+            "description": "Solutions to Common Problems and Directions for Receiving Live Help",
+            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+        }
   ]
 }
