--- a/ai-optimizer/workshops/sandbox/manifest.json
+++ b/ai-optimizer/workshops/sandbox/manifest.json
@@ -1,8 +1,8 @@
 {
     "workshoptitle": "The Title of the Workshop is defined in the manifest",
     "help": "livelabs-help-**enterarea**_us@oracle.com",
-    "variables": ["../../variables/variables.json",
-        "../../variables/variables-in-another-file.json"],
+    "variables": ["../../microservice/variables.json",
+        "../../microservice/variables-in-another-file.json"],
     "tutorials": [
         {
             "title": "Introduction",
@@ -36,8 +36,8 @@
             "filename": "../../evaluating/evaluating.md"
         },
         {
-            "title": "Lab 6: Variables in LiveLabs",
-            "filename": "../../variables/variables.md"
+            "title": "(Optional) Lab 6: Generating Microservice Code",
+            "filename": "../../microservice/microservice.md"
         },
         {
             "title": "(Optional) Lab 7: Using the API Server",
