set OCI credentials added

--- a/ai-optimizer/workshops/sandbox/manifest.json
+++ b/ai-optimizer/workshops/sandbox/manifest.json
@@ -16,7 +16,7 @@
         },
         {
             "title": "Lab 1: Explore the Environment",
-            "description": "Labs that follow the introduction are numbered, starting with Lab 1",
+            "description": "Lab where you explore the environment and setup the credentials",
             "filename": "../../explore/explore.md"
         },
         {
