--- a/ai-optimizer/workshops/sandbox/manifest.json
+++ b/ai-optimizer/workshops/sandbox/manifest.json
@@ -46,7 +46,7 @@
         {
             "title": "Need Help?",
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+            "filename":"../../help/help.md"
         }
     ]
 }
