WMS 11900: Initial workshop - finished all labs
WMS 11900: Initial workshop - finished all labs

--- a/zebrashopping/workshops/sandbox/manifest.json
+++ b/zebrashopping/workshops/sandbox/manifest.json
@@ -18,7 +18,7 @@
             "filename": "../../demo/demo.md"
         },
         {
-            "title": "Lab 2: Explore the code!",
+            "title": "Lab 2: Explore & improve the code!",
             "filename": "../../code/code.md"
         },
         {
