--- a/ai-optimizer/workshops/desktop/manifest.json
+++ b/ai-optimizer/workshops/desktop/manifest.json
@@ -7,17 +7,17 @@
         {
             "title": "Introduction",
             "description": "The Introduction is always first. The title and contents menu title match for the Introduction.",
-            "filename": "../desktop/introduction/introduction.md"
+            "filename": "../../desktop/introduction/introduction.md"
         },
         {
             "title": "Get Started",
             "description": "This is the prerequisites for customers using Free Trial and Paid tenancies, and Always Free accounts (if applicable). The title of the lab and the Contents Menu title (the title above) match for Prerequisite lab. This lab is always first.",
-            "filename": "../desktop/get-started/get-started.md"
+            "filename": "../../desktop/get-started/get-started.md"
         },
         {
             "title": "Lab 1: Explore the Environment",
             "description": "Labs that follow the introduction are numbered, starting with Lab 1",
-            "filename": "../desktop/explore/explore.md"
+            "filename": "../../desktop/explore/explore.md"
         },
         {
             "title": "Lab 2: Prepare the Vector Store",
