--- a/ai-optimizer/workshops/desktop/manifest.json
+++ b/ai-optimizer/workshops/desktop/manifest.json
@@ -25,7 +25,7 @@
         },
         {
             "title": "Lab 3: Using Retrieval Augmented Generation",
-            "filename": "../../desktop/RAG/RAG.md"
+            "filename": "../../desktop/rag/rag.md"
         },
         {
             "title": "Lab 4: Experimenting with Models, Parameters and Techniques",
