--- a/ai-optimizer/workshops/desktop/manifest.json
+++ b/ai-optimizer/workshops/desktop/manifest.json
@@ -1,6 +1,6 @@
 {
   "workshoptitle": "Build a Better ChatBot",
-  "help": "livelabs-help-**enterarea**_us@oracle.com",
+  "help": "livelabs-help-devdb_us@oracle.com",
   "variables": ["../../microservice/variables.json",
     "../../variables/microservice-in-another-file.json"],
   "tutorials": [
