changes to manifest.json

--- a/ords-mcp/workshops/sandbox/manifest.json
+++ b/ords-mcp/workshops/sandbox/manifest.json
@@ -6,9 +6,33 @@
       "help": "livelabs-help-db_us@oracle.com",
       "tutorials": [
         {
-            "title": "LiveLabs Complete Template",
+            "title": " ",
             "description": "This is the complete template for LiveLabs content developers",
-            "type": "livelabs",
+            "filename": "../../livelabs-template.md"
+        },
+        {
+          "title": " ",
+          "description": "Template to link to Need Help lab at the end of workshop. Change 'CHANGE-ME' in link below to need-help-livelabs.md or need-help-freetier.md",
+          "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+        },
+         {
+            "title": " ",
+            "description": "This is the complete template for LiveLabs content developers",
+            "filename": "../../livelabs-template.md"
+        },
+        {
+          "title": " ",
+          "description": "Template to link to Need Help lab at the end of workshop. Change 'CHANGE-ME' in link below to need-help-livelabs.md or need-help-freetier.md",
+          "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+        },
+        {
+          "title": " ",
+          "description": "Template to link to Need Help lab at the end of workshop. Change 'CHANGE-ME' in link below to need-help-livelabs.md or need-help-freetier.md",
+          "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+        },
+         {
+            "title": " ",
+            "description": "This is the complete template for LiveLabs content developers",
             "filename": "../../livelabs-template.md"
         },
         {
