WMS 11900: fixed typo
WMS 11900: fixed typo

--- a/zebrashopping/workshops/sandbox/manifest.json
+++ b/zebrashopping/workshops/sandbox/manifest.json
@@ -17,7 +17,7 @@
             "filename": "../../code/code.md"
         },
         {
-            "title": "Lab 3: Implement a Sementic Cache",
+            "title": "Lab 3: Implement a Semantic Cache",
             "filename": "../../cache/cache.md"
         },
         {
