--- a/sqlcl-mcp-server-intro/workshops/tenancy/manifest.json
+++ b/sqlcl-mcp-server-intro/workshops/tenancy/manifest.json
@@ -6,34 +6,34 @@
       "help": "livelabs-help-db_us@oracle.com",
       "tutorials": [
         {
-            "title": "Title",
-            "description": "This is the complete template for LiveLabs content developers",
+            "title": "Introduction",
+            "description": "SQLcl MCP Server introduction.",
             "filename": "../../1-introduction.md"
         },
         {
-          "title": "Title",
-          "description": "Template to link to Need Help lab at the end of workshop. Change 'CHANGE-ME' in link below to need-help-livelabs.md or need-help-freetier.md",
+          "title": "Environment set-up",
+          "description": "Installing and configuring necessary dependencies and pre-requisites.",
           "filename":"../../2-environment-set-up.md"
         },
          {
-            "title": "Title",
-            "description": "This is the complete template for LiveLabs content developers",
-            "filename": "../../livelabs-template.md"
+            "title": "Explore SQLcl MCP server",
+            "description": "Setting up a database connection, getting to know Cline and the SQLcl MCP Server.",
+            "filename": "../../3-using-the-mcp-server.md"
         },
         {
-          "title": " ",
-          "description": "Template to link to Need Help lab at the end of workshop. Change 'CHANGE-ME' in link below to need-help-livelabs.md or need-help-freetier.md",
-          "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+          "title": "Create database objects",
+          "description": "Creating database objects in a new.",
+          "filename":"../../4-build-a-schema.md"
         },
         {
-          "title": " ",
-          "description": "Template to link to Need Help lab at the end of workshop. Change 'CHANGE-ME' in link below to need-help-livelabs.md or need-help-freetier.md",
-          "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-freetier.md"
+          "title": "Build a React app",
+          "description": "Building a starter React-based application.",
+          "filename":"../../5-build-a-react-app.md"
         },
          {
-            "title": " ",
-            "description": "This is the complete template for LiveLabs content developers",
-            "filename": "../../livelabs-template.md"
+            "title": "Build an HTML dashbaord",
+            "description": "Building a starter HTML-dashboard.",
+            "filename": "../../6-build-a-html-dashboard.md"
         },
         {
           "title": "Need Help?",
