removed screenshot files, updated title name in manifest.

--- a/sqlcl-mcp-server-intro/workshops/tenancy/manifest.json
+++ b/sqlcl-mcp-server-intro/workshops/tenancy/manifest.json
@@ -1,5 +1,5 @@
 {
-    "workshoptitle": "The Title of the Workshop is defined in the manifest",
+    "workshoptitle": "Explore the SQLcl MCP Server",
     "include": {"starter-file.sql":"../../files/starter-file.sql",
                 "sample.json":"../../files/sample.json",
                 "injected-step.md":"../../files/injected-step.md"},
