--- a/all-you-never-knew/workshops/tenancy/manifest.json
+++ b/all-you-never-knew/workshops/tenancy/manifest.json
@@ -49,7 +49,7 @@
         {
             "title": "Need Help?",
             "description": "Solutions to Common Problems and Directions for Receiving Live Help",
-            "filename":"../../help/help.md"
+            "filename":"https://oracle-livelabs.github.io/common/labs/need-help/need-help-livelabs.md"
         }
     ]
 }
