quickstart templates update

--- a/quickstart-vector/workshops/quickstart/manifest.json
+++ b/quickstart-vector/workshops/quickstart/manifest.json
@@ -6,8 +6,8 @@
             "filename": "../../intro/intro.md"
         },
         {
-            "title": "QuickStart Demo",
-            "filename": "../../demo/demo.md"
+            "title": "QuickStart",
+            "filename": "../../quickstart/quickstart.md"
         },
         {
             "title": "Next Steps",
