--- a/build-ords-apis-in-adb/workshops/tenancy/manifest.json
+++ b/build-ords-apis-in-adb/workshops/tenancy/manifest.json
@@ -8,7 +8,7 @@
             "filename": "../../intro/intro.md"
         },
         {
-            "title": "Free Tier Registration",
+            "title": "Get Started",
             "description": "Obtain an Always Free tier Oracle Cloud Infrastructure account",
             "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/pre-register-free-tier-account.md"
         },
