--- a/build-ords-apis-in-adb/workshops/livelabs/manifest.json
+++ b/build-ords-apis-in-adb/workshops/livelabs/manifest.json
@@ -1,49 +1,39 @@
 {
-  "workshoptitle": "Modern Application Development with Oracle REST Data Services",
+  "workshoptitle": "ORDS: Build Powerful, Secure RESTful ORDS APIs for your Oracle Autonomous Database",
     "help": "livelabs-help-db_us@oracle.com",
 	"tutorials": [
         {
             "title": "Introduction",
-            "description": "Modern Application Development with Oracle REST Data Services Introduction",
-            "filename": "../../1-intro/intro.md"
+            "description": "ORDS: Build Powerful, Secure RESTful ORDS APIs for your Oracle Autonomous Database Introduction",
+            "filename": "../../intro/intro.md"
         },
         {
             "title": "Get Started",
-            "description": "Login to Oracle Cloud Infrastructure",
-            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/cloud-login-livelabs.md"
+            "description": "Obtain an Always Free tier Oracle Cloud Infrastructure account",
+            "filename": "https://oracle-livelabs.github.io/common/labs/cloud-login/pre-register-free-tier-account.md"
         },
         {
-            "title": "Lab 1: Provision an Autonomous Database (ADW and ATP)",
-            "description": "Provision an Autonomous Database - ATP or ADW",
-            "filename": "https://oracle-livelabs.github.io/adb/shared/adb-provision/adb-provision.md"
+            "title": "Provision and Connect to an Autonomous Database",
+            "description": "Provision an Autonomous Database in Oracle Cloud Infrastructure",
+            "filename": "../../provision-and-connect-to-adb/provision-and-connect-to-new-adb.md"
         },
         {
-            "title": "Lab 2: Connect to an Autonomous Database",
-            "description": "Connect to an Autonomous Database with SQL Developer Web",
-            "filename": "https://oracle-livelabs.github.io/common/labs/sqldevweb-login/sqldevweb-login.md"
-        },
-        {
-            "title": "Lab 3: Create and auto-REST enable a table",
+            "title": "Lab 1: Create a user, AutoREST-enable a table, test with cURL",
             "description": "Modern App Dev with Oracle REST Data Services",
-            "filename": "../../2-create-table/create-table.md"
+            "filename": "../../1-create-user-and-database-objects/create-user-and-database-objects.md"
         },
         {
-            "title": "Lab 4: Load data and create business logic",
+            "title": "Lab 2: Build ORDS APIs",
             "description": "Modern App Dev with Oracle REST Data Services",
-            "filename": "../../3-batch-load-data-and-biz-objs/batch-load-data-and-biz-objs.md"
+            "filename": "../../2-build-ords-apis/build-ords-apis.md"
         },
         {
-            "title": "Lab 5: REST enable tables and add business logic",
+            "title": "Lab 3: Secure REST-enabled endpoints",
             "description": "Modern App Dev with Oracle REST Data Services",
-            "filename": "../../4-rest-enable-objects/rest-enable-objects.md"
+            "filename": "../../3-secure-endpoints/secure-endpoints.md"
         },
         {
-            "title": "Lab 6: Secure REST-enabled endpoints",
-            "description": "Modern App Dev with Oracle REST Data Services",
-            "filename": "../../5-secure-endpoints/secure-endpoints.md"
-        },
-        {
-            "title": "Lab 7: Clean up your Always Free Autonomous Database",
+            "title": "Clean up your Always Free Autonomous Database",
             "description": "Terminate your Always Free Autonomous Database",
             "filename": "https://oracle-livelabs.github.io/common/labs/terminate-adb/terminate-adb.md"
         },
