updated prompts, removed oca from images, reduced text overall, updated sqlcl and freesql steps

--- a/sqlcl-mcp-server-intro/workshops/freesql/manifest.json
+++ b/sqlcl-mcp-server-intro/workshops/freesql/manifest.json
@@ -32,7 +32,7 @@
           "filename":"../../5-build-a-react-app.md"
         },
          {
-            "title": "Build an HTML dashbaord",
+            "title": "Build an HTML dashboard",
             "description": "Building a starter HTML-dashboard.",
             "filename": "../../6-build-a-html-dashboard.md"
         },
