Reorganize vertex-ai-agents tasks: move GCP Conversational Agents to optional Task 7, ADK to Task 4, add new images

--- a/multicloud-gcpagenticai-oracledb/workshops/tenancy/manifest.json
+++ b/multicloud-gcpagenticai-oracledb/workshops/tenancy/manifest.json
@@ -1,5 +1,5 @@
 {
-  "workshoptitle": "Build MultiCloud Agentic AI with Google Vertex AI (Gemini) and Oracle AI Database",
+  "workshoptitle": "Develop Agentic AI with Google Vertex AI (Gemini) and Oracle AI Database",
   "help": "livelabs-help-devdb-us@oracle.com",
 	"tutorials": [
       {
